src/test/ui/issues/issue-22933-3.stderr
error[E0599]: no associated item named `MIN` found for type `u8` in the current scope
  --> $DIR/issue-22933-3.rs:1:22
   |
LL | const FOO: [u32; u8::MIN as usize] = [];
   |                      ^^^ associated item not found in `u8`
help: you are looking for the module in `std`, not the primitive type
   |
LL | const FOO: [u32; std::u8::MIN as usize] = [];
   |                  ^^^^^^^^^^^^

error: aborting due to previous error

For more information about this error, try `rustc --explain E0599`.
