src/test/ui/issues/issue-22933-3.rs
const FOO: [u32; u8::MIN as usize] = [];
//~^ ERROR no associated item named `MIN` found for type `u8`

fn main() {}
